# qsudoku

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cc  mainwindow.cc  mainwindow.h  测试用例.md
src/: dancelink.h  gameactivity.cc  main.cc  mainwindow.cc  mainwindow.h  neocc.h  sudoku.cc  sudoku.h  welcomeactivity.cc
